refactoring and readme