@@ -1,4 +1,4 @@
-package com.compliance.compliancetestllm.service;
+package com.compliance.compliancetestllm.client;
 
 import com.compliance.compliancetestllm.dto.ChatRequest;
 import com.compliance.compliancetestllm.dto.ChatResponse;
@@ -8,9 +8,8 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
 
-
 @Component
-public class OpenAIClient {
+public class BasicOpenAIClient implements OpenAIClient {
 
     @Qualifier("openaiRestTemplate")
     @Autowired
@@ -22,13 +21,16 @@ public class OpenAIClient {
     @Value("${openai.api.url}")
     private String apiUrl;
 
+    @Override
     public String getCompletion(String prompt) {
         ChatRequest request = new ChatRequest(model, prompt);
         ChatResponse response = restTemplate.postForObject(apiUrl, request, ChatResponse.class);
         System.out.println(restTemplate.postForObject(apiUrl, request, String.class));
+
         if (response == null || response.getChoices() == null || response.getChoices().isEmpty()) {
             return "No response";
         }
-        return response.getChoices().getFirst().getMessage().content();
+
+        return response.getChoices().get(0).getMessage().content();
     }
 }
